--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ nav{
 .pagename img{
     width: 100%;
     height: 60px;
-    border: 1px solid rgb(255, 255, 255, 10%);
+    border: 1px solid rgb(255, 255, 255, 8                                                          0%);
     border-radius: 4px;
 }
 .pagename h1{
@@ -46,15 +46,59 @@ nav{
     font-size: 28px;
     display: none;
 }
-.close_ham {
+/* .close_ham {
     color: white;
     font-size: 28px;
     display: none;
-}
+} */
 .ham_icon:hover {
     cursor: pointer;
 }
+.search_bar{
+    width: 50%;
+    margin: 0 auto;
+    padding:30px;
+    position: relative;
+}
+.icon{
+    position: absolute;
+    right: 0;
+    margin: 0 31px 0 5px;
+    border-radius: 2px;
+    font-size: 20px;
+    background-color: rgb(120, 107, 196);
+    padding: 10px;
+    color: white;
+    font-weight: 900;
+}
 
+#searchbar{
+    border: 2px solid rgb(120, 107, 196);
+    border-radius: 5px;
+    border-bottom: 5px solid rgb(120, 107, 196);
+    border-left: 5px solid rgb(120, 107, 196);
+    width: 100%;
+    height: 30px;
+    padding: 20px; 
+    outline: none;   
+}
+.container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 45px;
+    padding: 60px;
+    margin-bottom: 30px;
+}
+.images{
+    border: 1px solid rgb(120, 107, 196);
+}
+.desc{
+    text-align: center;
+}
+.blackwomen{
+    width: 100%;
+    height: 300px;
+}  
 @media(max-width: 850px){
     .nav-items li{
         display: none;
@@ -62,7 +106,12 @@ nav{
     .ham_icon{
         display: block;
     }
-    .close_ham{
-        display: none;
+    .container{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media(max-width: 450px){
+    .container{
+        grid-template-columns: 1fr;
     }
 }
